<resources>
    <string name="app_name">PlayListMaker</string>
    <string name="play_list">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="setting">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="impart">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="agree">Пользовательское соглашение</string>
    <string name="thanksForDevelopers">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="subjectForDevelopers">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="url_course_android_dev">https://practicum.yandex.ru/profile/android-developer/</string>
    <string name="url_practicum_offer">https://yandex.ru/legal/practicum_offer</string>
    <string name="email_developer">shchegolyaeva32@yandex.ru</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="something_went_wrong">Что-то пошло не так</string>
    <string name="update">Обновить</string>
    <string name="internet_not_connect">Проблемы со связью\n\n Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="time">0:30</string>

</resources>