<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="?attr/colorPrimaryVariant">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/back_icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_arrow" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.06" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.94" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/image_bottom_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.47" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/text_top_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.78" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/text_bottom_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.976" />


    <ImageView
        android:id="@+id/cover"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/ic_vector"
        app:layout_constraintBottom_toBottomOf="@id/image_bottom_guideline"
        app:layout_constraintDimensionRatio="w, 1:1"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/back_icon" />

    <TextView
        android:id="@+id/track_name"
        style="@style/YSMedium22"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toTopOf="@id/artist_name"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toTopOf="@id/image_bottom_guideline"
        app:layout_constraintVertical_chainStyle="spread"
        tools:text="Yesterday (Remastered 2009)" />

    <TextView
        android:id="@+id/artist_name"
        android:fontFamily="@font/ys_display_medium"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="14sp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toTopOf="@id/play_button"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/track_name"
        tools:text="The Beatles" />

    <ImageButton
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:src="@drawable/add_button"
        app:layout_constraintBottom_toBottomOf="@id/play_button"
        app:layout_constraintEnd_toStartOf="@id/play_button"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toTopOf="@id/play_button" />


    <ImageButton
        android:id="@+id/play_button"
        app:tint="?attr/colorOnPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:src="@drawable/play_button"
        app:circularflow_viewCenter="@id/add_button"
        app:layout_constraintBottom_toBottomOf="@id/excerpt_duration"
        app:layout_constraintEnd_toStartOf="@id/like_button"
        app:layout_constraintStart_toEndOf="@id/add_button"
        app:layout_constraintTop_toTopOf="@id/artist_name" />

    <ImageButton
        android:id="@+id/like_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:src="@drawable/like_button"
        app:layout_constraintBottom_toBottomOf="@id/play_button"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintStart_toEndOf="@id/play_button"
        app:layout_constraintTop_toTopOf="@id/play_button" />

    <TextView
        android:id="@+id/excerpt_duration"
        android:fontFamily="@font/ys_display_medium"
        android:textSize="14sp"
        android:textColor="?attr/colorOnPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        app:layout_constraintBottom_toBottomOf="@id/text_top_guideline"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/play_button" />

    <TextView
        android:id="@+id/duration"
        android:fontFamily="@font/ys_display_medium"
        android:textSize="13sp"
        android:textColor="@color/grey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/duration"
        app:layout_constraintBottom_toTopOf="@id/album"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/text_top_guideline"
        app:layout_constraintVertical_chainStyle="spread" />

    <TextView
        android:id="@+id/changeable_duration"
        android:fontFamily="@font/ys_display_medium"
        android:textSize="13sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:textColor="?attr/colorOnPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/duration"
        app:layout_constraintVertical_chainStyle="spread"
        tools:text="5:35" />

    <TextView
        android:id="@+id/album"
        android:fontFamily="@font/ys_display_medium"
        android:textSize="13sp"
        android:textColor="@color/grey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/album"
        app:layout_constraintBottom_toTopOf="@id/year"
        app:layout_constraintEnd_toStartOf="@id/changeable_album"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/duration" />

    <TextView
        android:id="@+id/changeable_album"
        android:fontFamily="@font/ys_display_medium"
        android:textSize="13sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="16dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:textColor="?attr/colorOnPrimary"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/album"
        app:layout_constraintTop_toTopOf="@id/album"
        app:layout_constraintVertical_chainStyle="spread"
        tools:text="Yesterday (Remastered 2009)" />

    <TextView
        android:id="@+id/year"
        android:fontFamily="@font/ys_display_medium"
        android:textSize="13sp"
        android:textColor="@color/grey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/year"
        app:layout_constraintBottom_toTopOf="@id/genre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/album" />

    <TextView
        android:id="@+id/changeable_year"
        android:textColor="?attr/colorOnPrimary"
        android:fontFamily="@font/ys_display_medium"
        android:textSize="13sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/year"
        tools:text="1965" />

    <TextView
        android:id="@+id/genre"
        android:fontFamily="@font/ys_display_medium"
        android:textSize="13sp"
        android:textColor="@color/grey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/genre"
        app:layout_constraintBottom_toTopOf="@id/country"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/year" />

    <TextView
        android:id="@+id/changeable_genre"
        android:textColor="?attr/colorOnPrimary"
        android:fontFamily="@font/ys_display_medium"
        android:textSize="13sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:ellipsize="end"
        android:maxLines="1"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/genre"
        tools:text="Rock" />

    <TextView
        android:id="@+id/country"
        android:fontFamily="@font/ys_display_medium"
        android:textSize="13sp"
        android:textColor="@color/grey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/country"
        app:layout_constraintBottom_toBottomOf="@id/text_bottom_guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/genre"/>

    <TextView
        android:id="@+id/changeable_country"
        android:textColor="?attr/colorOnPrimary"
        android:fontFamily="@font/ys_display_medium"
        android:textSize="13sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:ellipsize="end"
        android:maxLines="1"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/country"
        tools:text="Великобритания" />

</androidx.constraintlayout.widget.ConstraintLayout>